--- a/BlockMaze/project/project.vcxproj.filters
+++ b/BlockMaze/project/project.vcxproj.filters
@@ -47,6 +47,7 @@
     <ClCompile Include="Source\Coin.cpp">
       <Filter>PlayScene</Filter>
     </ClCompile>
+    <ClCompile Include="Source\GoalText.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\config.h" />
@@ -103,6 +104,9 @@
       <Filter>PlayScene</Filter>
     </ClInclude>
     <ClInclude Include="Source\stage1.h">
+      <Filter>PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\GoalText.h">
       <Filter>PlayScene</Filter>
     </ClInclude>
   </ItemGroup>
