--- a/BlockMaze/project/project.vcxproj.filters
+++ b/BlockMaze/project/project.vcxproj.filters
@@ -48,6 +48,7 @@
       <Filter>PlayScene</Filter>
     </ClCompile>
     <ClCompile Include="Source\GoalText.cpp" />
+    <ClCompile Include="Source\Fader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\config.h" />
@@ -108,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="Source\GoalText.h">
       <Filter>PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Fader.h">
+      <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
