--- a/BlockMaze/project/project.vcxproj.filters
+++ b/BlockMaze/project/project.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="Source\Fader.h">
       <Filter>common</Filter>
     </ClInclude>
+    <ClInclude Include="Source\RESULTScene.h">
+      <Filter>PlayScene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Library">
