--- a/モデルビューワー/project/imgui.ini
+++ b/モデルビューワー/project/imgui.ini
@@ -3,5 +3,15 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][TEST]
+Pos=60,60
+Size=304,138
+Collapsed=0
+
+[Window][ROTATION]
+Pos=60,60
+Size=247,141
+Collapsed=0
+
 [Docking][Data]
 
