--- a/DotEater/project/project.vcxproj.filters
+++ b/DotEater/project/project.vcxproj.filters
@@ -72,6 +72,12 @@
       <Filter>PlayScene</Filter>
     </ClCompile>
     <ClCompile Include="Source\Coin.cpp" />
+    <ClCompile Include="Source\ReadyGo.cpp">
+      <Filter>PlayScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\PlayTime.cpp">
+      <Filter>PlayScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Screen.h" />
@@ -158,6 +164,12 @@
       <Filter>PlayScene</Filter>
     </ClInclude>
     <ClInclude Include="Source\Coin.h">
+      <Filter>PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ReadyGo.h">
+      <Filter>PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\PlayTime.h">
       <Filter>PlayScene</Filter>
     </ClInclude>
   </ItemGroup>
