--- a/DotEater/project/project.vcxproj
+++ b/DotEater/project/project.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Source\Player.h" />
     <ClInclude Include="Source\PlayTime.h" />
     <ClInclude Include="Source\ReadyGo.h" />
+    <ClInclude Include="Source\Record.h" />
     <ClInclude Include="Source\Screen.h" />
     <ClInclude Include="Source\PlayScene.h" />
     <ClInclude Include="Source\SceneFactory.h" />
@@ -193,6 +194,7 @@
     <ClCompile Include="Source\PlayScene.cpp" />
     <ClCompile Include="Source\PlayTime.cpp" />
     <ClCompile Include="Source\ReadyGo.cpp" />
+    <ClCompile Include="Source\Record.cpp" />
     <ClCompile Include="Source\SceneFactory.cpp" />
     <ClCompile Include="Source\Stage.cpp" />
     <ClCompile Include="Source\TitleScene.cpp" />
