--- a/SwordBout/project/project.vcxproj.filters
+++ b/SwordBout/project/project.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClCompile Include="Source\Camera.cpp">
       <Filter>2.PlayScene</Filter>
     </ClCompile>
+    <ClCompile Include="Source\PadInput.cpp">
+      <Filter>2.PlayScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Screen.h" />
@@ -193,6 +196,9 @@
       <Filter>9.Common</Filter>
     </ClInclude>
     <ClInclude Include="Source\Camera.h">
+      <Filter>2.PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\PadInput.h">
       <Filter>2.PlayScene</Filter>
     </ClInclude>
   </ItemGroup>
