--- a/SwordBout/project/project.vcxproj.filters
+++ b/SwordBout/project/project.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClCompile Include="Source\EnemyManager.cpp">
       <Filter>2.PlayScene\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Source\csvReader.cpp">
+      <Filter>9.Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Screen.h" />
@@ -209,6 +212,9 @@
     </ClInclude>
     <ClInclude Include="Source\EnemyManager.h">
       <Filter>2.PlayScene\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CsvReader.h">
+      <Filter>9.Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
